# ChatProject

./: CMakeLists.txt  README  main.cpp
classes/: Chat.cpp  Chat.h  ChatSystem.cpp  ChatSystem.h  Message.cpp  Message.h  User.cpp  User.h
tests/: chatSystemTest.cpp  chatTest.cpp  messageTest.cpp  userTest.cpp
